--- a/shop.css
+++ b/shop.css
@@ -25,3 +25,12 @@ margin-top: 15px;
 margin-left: 1200px;
 
 }
+.ButtonBuy{
+    
+
+
+    margin-top: 40%;
+}
+.buy{ 
+border: 2px solid #8F8F8F;
+}
