--- a/shop.css
+++ b/shop.css
@@ -25,12 +25,24 @@ margin-top: 15px;
 margin-left: 1200px;
 
 }
-.ButtonBuy{
-    
 
 
-    margin-top: 40%;
+.buy1{
+ background-color: #8F8F8F;
+ width: 162px;
+height: 144px;
+
 }
-.buy{ 
-border: 2px solid #8F8F8F;
+.towar{
+  margin-left: 5%;
+  margin-right: 5%;
+  width: 144px;
+  height: 89px;
+}
+.BuyBatt{
+    
+position: relative;
+width: 97px;
+height: 30px;
+margin-top: 134;
 }
