--- a/shop.css
+++ b/shop.css
@@ -29,19 +29,24 @@ margin-left: 1200px;
 
 .buy1{
  background-color: #8F8F8F;
- width: 162px;
-height: 144px;
+ width: 224px;
+height: 190px;
+display: inline-block;
+flex: 20px;
+flex-grow: inherit;
+margin-top: 15%;
+margin: 45px;
 
 }
 .towar{
   margin-left: 5%;
   margin-right: 5%;
-  width: 144px;
-  height: 89px;
+  margin-top: 5%;
+  width: px;
+  height: 130px;
+  width: 190px;
 }
 .BuyBatt{
-    
-position: relative;
 width: 97px;
 height: 30px;
 margin-top: 134;
