--- a/shop.css
+++ b/shop.css
@@ -1,5 +1,5 @@
 .Header{
-    position: absolute;
+
 width: 1350px;
 height: 79px;
 
@@ -35,9 +35,12 @@ height: 190px;
 display: inline-block;
 flex: 20px;
 flex-grow: inherit;
-margin-top: 15%;
-margin: 45px;
+margin-top: 23%;
+margin: 45px;   
 
+}
+.buy1:hover{
+    box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.63);
 }
 .towar{
   margin-left: 5%;
@@ -49,6 +52,17 @@ margin: 45px;
 }
 .BuyBatt{
 width: 97px;
-height: 30px;
-margin-top: 134;
+margin-top: 20px;
+border: none;
+height: 30px
+box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.63);
+border-radius: 14px;
+}
+.BuyBatt:hover{
+    background: #393b3a;
+    box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.40);
+    text-shadow: #ffffff;
+}
+.money{
+    margin-left: 80%;
 }
