--- a/golov.css
+++ b/golov.css
@@ -1,13 +1,26 @@
 .head{
     background: #8F8F8F;
     width: 100%;
-    height: 79px;
+    position: absolute;
+    margin-bottom: 70px;
 }
 
 .logo{
     margin-left: 20px;
 }
-
-.cate{
-    margin-left: 55%;
+.Input{
+    position: absolute;
+    width: 303px;
+    height: 29px;
+    margin-top: 20px;
+    margin-left: 70px;
+    background: #D9D9D9;
+    border-radius: 16px;
+    border: none;
 }
+.ButtonInput{
+    position: absolute;
+margin-left: 37%;
+margin-top: 19px;
+}
+
