--- a/G/golov.css
+++ b/G/golov.css
@@ -24,3 +24,9 @@ margin-left: 37%;
 margin-top: 19px;
 }
 
+.p1{
+    margin-left: 500px;
+    position: absolute;
+    margin: 4%;
+    margin-top: 20px;
+}
